--- a/Note/templates/note_confirm_delete.html
+++ b/Note/templates/note_confirm_delete.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deletion Confirmation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Are you sure you want to delete the note "{{ object.title }}"?</h1>
