--- a/Note/templates/note_list.html
+++ b/Note/templates/note_list.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>List of Notes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>List of Notes</h1>
