--- a/Note/templates/note_list.html
+++ b/Note/templates/note_list.html
@@ -3,18 +3,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Notes</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}" id="theme-style">
 </head>
 <body>
-    <h1>List of Notes</h1>
-    <ul>
-        {% for note in object_list %}
-            <li><a href="{% url 'note_detail' note.pk %}">{{ note.title }}</a></li>
-        {% empty %}
+    <div class="container" id="container">
+        <h1>List of Notes</h1>
+        <ul>
+            {% for note in object_list %}
+            <li>
+                <div class="note">
+                    <a class="note-info" href="{% url 'note_detail' note.pk %}">
+                        <h2>{{ note.title }}</h2>
+                        <p>{{ note.created_at }}</p>
+                        <p>{{ note.content }}</p>
+                    </a>
+                </div>
+            </li>
+            {% empty %}
             <li>No notes are available at the moment.</li>
-        {% endfor %}
-    </ul>
-    <a href="{% url 'note_create' %}">Add a New Note</a>
+            {% endfor %}
+        </ul>
+        <a class="link-button" href="{% url 'note_create' %}">Add a New Note</a>
+    </div>
 </body>
 </html>
