--- a/static/delete.css
+++ b/static/delete.css
@@ -7,8 +7,8 @@ body, html {
 /* Body styles */
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-    background-color: #121212; /* Dark background color */
-    color: #fff; /* Light text color */
+    background-color: #f4f4f4; /* Light background color */
+    color: #333; /* Dark text color */
 }
 
 /* Container styles */
@@ -16,43 +16,19 @@ body {
     max-width: 800px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #1e1e1e; /* White background color */
+    background-color: #fff; /* White background color */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 }
 
-
 /* Title styles */
 h1 {
     font-size: 24px;
+    color: #333; /* Dark text color */
     margin-bottom: 20px;
 }
 
-/* List styles */
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-/* List item styles */
-li {
-    margin-bottom: 10px;
-}
-
-.note-info {
-    display: inline-block;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0px 20px;
-    background-color: #444; /* Darker background color */
-    color: #fff; /* Light text color */
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease; /* Smooth transition on hover */
-}
-
-
-/* Link styles */
+/* Bouton styles */
 .link-button {
     display: inline-block;
     padding: 10px 20px;
@@ -60,9 +36,18 @@ li {
     color: #333; /* Dark text color */
     text-decoration: none;
     border-radius: 5px;
+    border: none;
     transition: background-color 0.3s ease; /* Smooth transition on hover */
+    font-family: inherit; /* Utilise la même police que le parent */
+    font-size: inherit; /* Utilise la même taille de police que le parent */
 }
 
 .link-button:hover {
     background-color: #e6ac00; /* Darker golden color on hover */
+}
+
+.link-button[value] {
+    color: inherit; /* Utilise la couleur héritée du parent */
+    font-family: inherit; /* Utilise la même police que le parent */
+    font-size: inherit; /* Utilise la même taille de police que le parent */
 }
