--- a/static/details.css
+++ b/static/details.css
@@ -7,50 +7,31 @@ body, html {
 /* Body styles */
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-    background-color: #121212; /* Dark background color */
-    color: #fff; /* Light text color */
+    background-color: #f4f4f4; /* Light background color */
+    color: #333; /* Dark text color */
 }
 
 /* Container styles */
 .container {
     max-width: 800px;
-    margin: 50px auto;
+    margin: 50px auto; /* Centrer le conteneur horizontalement */
     padding: 20px;
-    background-color: #1e1e1e; /* White background color */
+    background-color: #fff; /* White background color */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
 }
 
-
 /* Title styles */
 h1 {
     font-size: 24px;
+    color: #333; /* Dark text color */
     margin-bottom: 20px;
 }
 
-/* List styles */
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-/* List item styles */
-li {
+/* Paragraph styles */
+p {
     margin-bottom: 10px;
 }
-
-.note-info {
-    display: inline-block;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0px 20px;
-    background-color: #444; /* Darker background color */
-    color: #fff; /* Light text color */
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease; /* Smooth transition on hover */
-}
-
 
 /* Link styles */
 .link-button {
