--- a/Note/templates/note_form.html
+++ b/Note/templates/note_form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create a Note</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'form.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'global.css' %}">
 </head>
 <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Create">
+            <input class="button" type="submit" value="Create">
         </form>
     </div>
 </body>
