--- a/Note/templates/note_update_form.html
+++ b/Note/templates/note_update_form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Note</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'update.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'global.css' %}">
 </head>
 <body>
     <div class="container">
@@ -13,7 +13,7 @@
         <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">Update</button>
+            <button type="submit" class="button">Update</button>
         </form>
     </div>
 </body>
