--- a/Note/templates/note_list.html
+++ b/Note/templates/note_list.html
@@ -25,7 +25,7 @@
             <li>No notes are available at the moment.</li>
             {% endfor %}
         </ul>
-        <a class="button link-button" href="{% url 'note_create' %}">New Note</a>
+        <a class="button link-button new-note-button" href="{% url 'note_create' %}">New Note</a>
     </div>
 </body>
 </html>
