--- a/Note/templates/note_update_form.html
+++ b/Note/templates/note_update_form.html
@@ -14,6 +14,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="button">Update</button>
+            <a class="button link-button delete-button" href="{% url 'note_list' %}">Back</a>
         </form>
     </div>
 </body>
