--- a/static/global.css
+++ b/static/global.css
@@ -92,6 +92,17 @@ textarea {
     font-size: 14px;
 }
 
+.list-title{
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+.list-title p{
+    font-size: 16px;
+    font-weight: bold;
+}
+
 button:hover {
     background-color: #e6ac00; /* Darker golden color on hover */
 }
