--- a/Note/templates/note_detail.html
+++ b/Note/templates/note_detail.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Note Details</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'global.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'global.css' %}" id="theme-style">
 </head>
 <body>
     <div class="container">
