--- a/Note/templates/note_list.html
+++ b/Note/templates/note_list.html
@@ -7,7 +7,7 @@
     <title>List of Notes</title>
     <link rel="stylesheet" type="text/css" href="{% static 'global.css' %}" id="theme-style">
 </head>
-<body>
+<body class="dark-mode">
     <div class="container" id="container">
         <div class="list-title">
             <h1>List of Notes</h1>
