--- a/Note/templates/note_detail.html
+++ b/Note/templates/note_detail.html
@@ -10,11 +10,15 @@
     <div class="container">
         <h1>{{ note.title }}</h1>
         <p>{{ note.content }}</p>
+        {% if note.image %}
+            <img src="{{ note.image.url }}" alt="Note Image">
+        {% endif %}
         <div class="note-data">
             <p class="note-creation-date">Created at: {{ note.created_at }}</p>
-            <p class="note-last-update">Last updated at: {{ note.updated_at }}</p></div>
+            <p class="note-last-update">Last updated at: {{ note.updated_at }}</p>
+        </div>
         <a class="button link-button" href="{% url 'note_update' note.pk %}">Edit</a>
-        <a class="button link-button delete-button" href="{% url 'note_delete' object.pk %}">Delete</a>
+        <a class="button link-button delete-button" href="{% url 'note_delete' note.pk %}">Delete</a>
     </div>
 </body>
 </html>
