--- a/Note/templates/note_detail.html
+++ b/Note/templates/note_detail.html
@@ -19,6 +19,7 @@
         </div>
         <a class="button link-button" href="{% url 'note_update' note.pk %}">Edit</a>
         <a class="button link-button delete-button" href="{% url 'note_delete' note.pk %}">Delete</a>
+        <a class="button link-button delete-button" href="{% url 'note_list' %}">Back</a>
     </div>
 </body>
 </html>
