--- a/static/global.css
+++ b/static/global.css
@@ -30,6 +30,11 @@ body {
     height: 90%;
 }
 
+.container img {
+    max-width: 200px; /* Définit la largeur maximale de l'image à 100% de la largeur de son conteneur */
+    height: auto; /* Assurez-vous que la hauteur est ajustée automatiquement pour maintenir les proportions */
+}
+
 .note-data{
     border-top: 2px solid #2d2d2d;
     padding-top: 0px;
